# Excel

./: .gitignore  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj.filters  MyProject.sln  MyProject.vcxproj.filters  Spreadsheet.xlsx  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp
OpenXLSX/: ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj.filters  OpenXLSX.sln  cmake_install.cmake
OpenXLSX/OpenXLSX/: ALL_BUILD.vcxproj.filters  INSTALL.vcxproj.filters  OpenXLSX.Library.sln  OpenXLSX.vcxproj.filters  cmake_install.cmake
OpenXLSX/OpenXLSX/OpenXLSX/: OpenXLSXTargets.cmake
OpenXLSX/OpenXLSX/OpenXLSX.dir/Debug/: OpenXLSXd.lib.recipe
OpenXLSX/OpenXLSX/OpenXLSX.dir/Debug/OpenXLSX.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  OpenXLSX.lastbuildstate
output/Debug/: benchmark_main.lib  nowide.lib
